# CEF-Detector-Tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  base64.json  tauri.conf.json
src-tauri/src/: lib.rs  macos.rs  main.rs  windows.rs
